@@ -112,7 +112,7 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+      </dependencies>
 
     <build>
         <plugins>
@@ -159,11 +159,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>io.confluent</groupId>
@@ -223,4 +218,42 @@
             </resource>
         </resources>
     </build>
+
+    <profiles>
+      <profile>
+        <id>old_jdk</id>
+        <activation>
+          <jdk>[,1.17)</jdk>
+        </activation>
+        <build>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>${maven-surefire-plugin.version}</version>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+      <profile>
+        <id>new_jdk</id>
+        <activation>
+          <jdk>[1.17,]</jdk>
+        </activation>
+        <build>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>${maven-surefire-plugin.version}</version>
+              <configuration>
+                <argLine>
+                  --add-opens=java.base/java.lang=ALL-UNNAMED
+                </argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+    </profiles>
 </project>
